# kk-ai

./: .gitignore  AGENTS.global.md  AGENTS.md  README.md
.opencode/skills/: external-skills-updater
.pi/skills/: external-skills-updater
agents/common/: general-purpose.md  verification.md
agents/shared/: ProductResearch.md  WeChat-GZH-Operator.md  universal-translator.md
opencode-agents/common/: browser-researcher.md  诸葛亮.md
opencode-agents/shared/: GZH-Writer.md  Knowledge Co-Creator.md  ProductResearch.md  ResearchReporter.md  WeChat-GZH-Operator.md
opencode-commands/common/: goal.md
pi-agents/common/: verification.md  zhugeliang.md  诸葛亮.md
pi-agents/shared/: knowledge-co-creator.md  (+3 more)
pi-extensions/: README.md
scripts/: link-skills.sh  update-external-skills.sh
skills/common/ppt-master/scripts/: README.md  pyproject.toml
skills/common/ppt-master/scripts/docs/: confirm_ui.md  conversion.md  image.md  project.md  svg-pipeline.md  troubleshooting.md  update_spec.md
skills/shared/douban-k-search/scripts/: commands.py  main.py  pyproject.toml
skills/shared/douban-k-search/scripts/douban_utils/: __init__.py  api_handler.py  browser.py  data_models.py  formatters.py  html_parser.py  http_client.py
skills/shared/wechat-gzh-skill/scripts/: config.py  converter.py  main.py  markdown_parser.py  pyproject.toml  table_to_image.py  wechat_api.py
skills/shared/wechat-gzh-skill/scripts/stickers/: __init__.py  stickers.py
skills/shared/wechat-gzh-skill/scripts/themes/: __init__.py  autumn_warm.py  base.py  default.py  elegant_gold.py  juanran_pastel.py  minimal_blue.py  spring_fresh.py  wenxin_crimson.py  xiumi_style.py  xuanfei_sunshine.py
skills/shared/wechat-gzh-skill/scripts/themes/css/: autumn-warm.css  autumn-warm.yaml  default.css  default.yaml  juanran-pastel.css  juanran-pastel.yaml  spring-fresh.css  spring-fresh.yaml  wenxin-crimson.css  wenxin-crimson.yaml  xiumi-style.css  xiumi-style.yaml  xuanfei-sunshine.css  xuanfei-sunshine.yaml
(+210 files in other folders)
