[project]
name = "ppt-master"
version = "0.1.0"
description = "AI-driven multi-format SVG content generation system for creating native PowerPoint presentations"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
    "XlsxWriter>=3.0.0",
    "edge-tts>=7.2.8",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
    "PyMuPDF>=1.23.0",
    "mammoth>=1.6.0",
    "markdownify>=0.11.6",
    "ebooklib>=0.18",
    "nbconvert>=7.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "curl_cffi>=0.7.0",
    "google-genai>=1.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
cairosvg = ["cairosvg"]

[tool.uv]
dev-dependencies = []
