[project]
name = "douban-k-search"
version = "0.1.0"
description = "豆瓣搜索与数据采集工具，支持书籍、电影、音乐三个类目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
douban-search = "main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
